Refactor: Out with the old, in with the shiny and new! ✨🧼🧹
- Rewrote auth APIs in `controller/auth.go`  to be more descriptive and easy to understand. It's like giving your code a fresh coat of paint! 🎨
- Updated `controller/admin.go` to use more meaningful error messages. No more cryptic error codes! 🕵️‍♀️
- Added some much-needed documentation to our Swagger docs. Now everyone knows what the hell is going on! 🧠
- Migrated from the ancient and dusty `c.Error()` to the sleek and modern `AppError`. Because who wants to deal with ancient history anyway? 🦕
- Upgraded our database connection to be more robust and handle those pesky disconnections like a champ! 💪
- Optimized the database connection pool to make our application run faster than a cheetah on Red Bull!  🐆⚡️
